--- a/Learning logic gates.ipynb
+++ b/Learning logic gates.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,10 +13,10 @@
     "from typing import List, Dict\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from nn import NN\n",
-    "import act\n",
-    "import err\n",
-    "import opt\n",
+    "from PoorMansNN import NN\n",
+    "from PoorMansNN import act\n",
+    "from PoorMansNN import err\n",
+    "from PoorMansNN import opt\n",
     "\n",
     "plt.rcParams[\"figure.figsize\"] = (10,8)\n",
     "\n",
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
